--- a/help/C/project-image-burn.page
+++ b/help/C/project-image-burn.page
@@ -70,7 +70,7 @@
     Burner asks for manual ejecting and then often doesn't detect it. The same
     problem appears by putting inside new CD or DVD - Burner doesn't always
     detect it. Besides the multiple burn option has the same functionality as
-    Burn - they both allow to burn one or several copies, so one option would be
+    Burn - they both allow one to burn one or several copies, so one option would be
     enough.-->
 
   </steps>
