--- a/src/kylinburnerfilefilterselection.ui
+++ b/src/kylinburnerfilefilterselection.ui
@@ -1,26 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>KylinBurnerFileFilter</class>
- <widget class="QWidget" name="KylinBurnerFileFilter">
+ <class>KylinBurnerFileFilterSelection</class>
+ <widget class="QWidget" name="KylinBurnerFileFilterSelection">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>450</width>
-    <height>500</height>
+    <width>300</width>
+    <height>200</height>
    </rect>
-  </property>
-  <property name="minimumSize">
-   <size>
-    <width>450</width>
-    <height>500</height>
-   </size>
-  </property>
-  <property name="maximumSize">
-   <size>
-    <width>450</width>
-    <height>500</height>
-   </size>
   </property>
   <property name="windowTitle">
    <string>Form</string>
@@ -48,13 +36,13 @@
     <widget class="QWidget" name="widget" native="true">
      <property name="minimumSize">
       <size>
-       <width>450</width>
+       <width>300</width>
        <height>30</height>
       </size>
      </property>
      <property name="maximumSize">
       <size>
-       <width>450</width>
+       <width>300</width>
        <height>30</height>
       </size>
      </property>
@@ -167,13 +155,13 @@
     <widget class="QWidget" name="widget_2" native="true">
      <property name="minimumSize">
       <size>
-       <width>450</width>
+       <width>300</width>
        <height>40</height>
       </size>
      </property>
      <property name="maximumSize">
       <size>
-       <width>450</width>
+       <width>300</width>
        <height>40</height>
       </size>
      </property>
@@ -233,53 +221,19 @@
    </item>
    <item>
     <widget class="QWidget" name="widget_3" native="true">
-     <layout class="QHBoxLayout" name="horizontalLayout_5">
-      <property name="spacing">
-       <number>0</number>
-      </property>
-      <property name="leftMargin">
-       <number>25</number>
-      </property>
-      <property name="topMargin">
-       <number>20</number>
-      </property>
-      <property name="rightMargin">
-       <number>4</number>
-      </property>
-      <property name="bottomMargin">
-       <number>10</number>
-      </property>
-      <item>
-       <widget class="QTreeView" name="treeView">
-        <property name="frameShape">
-         <enum>QFrame::NoFrame</enum>
-        </property>
-        <property name="lineWidth">
-         <number>0</number>
-        </property>
-        <property name="verticalScrollBarPolicy">
-         <enum>Qt::ScrollBarAlwaysOff</enum>
-        </property>
-       </widget>
-      </item>
-     </layout>
-    </widget>
-   </item>
-   <item>
-    <widget class="QWidget" name="widget_4" native="true">
      <property name="minimumSize">
       <size>
-       <width>450</width>
-       <height>55</height>
+       <width>300</width>
+       <height>130</height>
       </size>
      </property>
      <property name="maximumSize">
       <size>
-       <width>450</width>
-       <height>55</height>
+       <width>300</width>
+       <height>130</height>
       </size>
      </property>
-     <layout class="QHBoxLayout" name="horizontalLayout_4">
+     <layout class="QVBoxLayout" name="verticalLayout_2">
       <property name="spacing">
        <number>5</number>
       </property>
@@ -287,25 +241,25 @@
        <number>25</number>
       </property>
       <property name="topMargin">
-       <number>0</number>
+       <number>15</number>
       </property>
       <property name="rightMargin">
-       <number>0</number>
+       <number>5</number>
       </property>
       <property name="bottomMargin">
        <number>25</number>
       </property>
       <item>
-       <widget class="QPushButton" name="btnSetting">
+       <widget class="QCheckBox" name="checkBoxHidden">
         <property name="minimumSize">
          <size>
-          <width>100</width>
+          <width>270</width>
           <height>30</height>
          </size>
         </property>
         <property name="maximumSize">
          <size>
-          <width>100</width>
+          <width>270</width>
           <height>30</height>
          </size>
         </property>
@@ -313,21 +267,21 @@
          <string notr="true">font: 14px &quot;Noto Sans CJK SC&quot;;</string>
         </property>
         <property name="text">
-         <string>FilterSetting</string>
+         <string>Filter Hidden Files (H)</string>
         </property>
        </widget>
       </item>
       <item>
-       <widget class="QPushButton" name="btnRecovery">
+       <widget class="QCheckBox" name="checkBoxWrongSymbol">
         <property name="minimumSize">
          <size>
-          <width>60</width>
+          <width>270</width>
           <height>30</height>
          </size>
         </property>
         <property name="maximumSize">
          <size>
-          <width>60</width>
+          <width>270</width>
           <height>30</height>
          </size>
         </property>
@@ -335,22 +289,31 @@
          <string notr="true">font: 14px &quot;Noto Sans CJK SC&quot;;</string>
         </property>
         <property name="text">
-         <string>Recovery</string>
+         <string>Filter  Broken Symbolic links (B)</string>
         </property>
        </widget>
       </item>
       <item>
-       <spacer name="horizontalSpacer_3">
-        <property name="orientation">
-         <enum>Qt::Horizontal</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
+       <widget class="QCheckBox" name="checkBoxReplaceSymbol">
+        <property name="minimumSize">
          <size>
-          <width>252</width>
-          <height>20</height>
+          <width>270</width>
+          <height>30</height>
          </size>
         </property>
-       </spacer>
+        <property name="maximumSize">
+         <size>
+          <width>270</width>
+          <height>30</height>
+         </size>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">font: 14px &quot;Noto Sans CJK SC&quot;;</string>
+        </property>
+        <property name="text">
+         <string>Replace Symbolic links (P)</string>
+        </property>
+       </widget>
       </item>
      </layout>
     </widget>
