--- a/src/pic/images.qrc
+++ b/src/pic/images.qrc
@@ -31,5 +31,6 @@
         <file>icon/icon-侧边背景.png</file>
         <file>icon/icon-right.png</file>
         <file>icon/icon-error.png</file>
+        <file>icon/draw-down.jpg</file>
     </qresource>
 </RCC>
