fix bug 20499 20475 & add theme manager.

--- a/src/pic/images.qrc
+++ b/src/pic/images.qrc
@@ -32,5 +32,6 @@
         <file>icon/icon-right.png</file>
         <file>icon/icon-error.png</file>
         <file>icon/draw-down.jpg</file>
+        <file>icon/128.png</file>
     </qresource>
 </RCC>
