Modify UI and Match some page the dark color pattern  Add solutions to singleton problems caused by VNC.

--- a/src/kylinburnerfilefilter.ui
+++ b/src/kylinburnerfilefilter.ui
@@ -10,6 +10,12 @@
     <height>500</height>
    </rect>
   </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
+  </property>
   <property name="minimumSize">
    <size>
     <width>450</width>
@@ -26,7 +32,8 @@
    <string>Form</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">background-color: rgb(255, 255, 255);</string>
+   <string notr="true">background-color: rgb(255, 255, 255);
+border: none;border-radius: 4px;</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <property name="spacing">
@@ -57,6 +64,9 @@
        <width>450</width>
        <height>34</height>
       </size>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">border-radius: 6px;</string>
      </property>
      <layout class="QHBoxLayout" name="horizontalLayout_2">
       <property name="spacing">
