--- a/src/pic/images.qrc
+++ b/src/pic/images.qrc
@@ -33,5 +33,6 @@
         <file>icon/icon-error.png</file>
         <file>icon/draw-down.jpg</file>
         <file>icon/128.png</file>
+        <file>icon/icon_xl.png</file>
     </qresource>
 </RCC>
