--- a/src/kylinburnerabout.ui
+++ b/src/kylinburnerabout.ui
@@ -262,6 +262,9 @@
         <property name="textFormat">
          <enum>Qt::PlainText</enum>
         </property>
+        <property name="alignment">
+         <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+        </property>
         <property name="wordWrap">
          <bool>true</bool>
         </property>
