--- a/src/kylinburnerabout.ui
+++ b/src/kylinburnerabout.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="sizePolicy">
-   <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+   <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
     <horstretch>0</horstretch>
     <verstretch>0</verstretch>
    </sizepolicy>
@@ -238,7 +238,7 @@
    </item>
    <item>
     <widget class="QWidget" name="widgetContent" native="true">
-     <layout class="QVBoxLayout" name="verticalLayout_3" stretch="2,1">
+     <layout class="QVBoxLayout" name="verticalLayout_3" stretch="0,1">
       <property name="spacing">
        <number>24</number>
       </property>
@@ -255,18 +255,21 @@
        <number>40</number>
       </property>
       <item>
-       <widget class="QLabel" name="textEdit">
-        <property name="text">
-         <string/>
+       <widget class="QTextEdit" name="textEdit">
+        <property name="acceptDrops">
+         <bool>false</bool>
         </property>
-        <property name="textFormat">
-         <enum>Qt::PlainText</enum>
+        <property name="frameShape">
+         <enum>QFrame::NoFrame</enum>
         </property>
-        <property name="alignment">
-         <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+        <property name="lineWidth">
+         <number>0</number>
         </property>
-        <property name="wordWrap">
-         <bool>true</bool>
+        <property name="undoRedoEnabled">
+         <bool>false</bool>
+        </property>
+        <property name="textInteractionFlags">
+         <set>Qt::NoTextInteraction</set>
         </property>
        </widget>
       </item>
@@ -289,21 +292,7 @@
           <number>0</number>
          </property>
          <item>
-          <widget class="QLabel" name="labelOfficalWebsite">
-           <property name="text">
-            <string/>
-           </property>
-          </widget>
-         </item>
-         <item>
           <widget class="QLabel" name="labelSupport">
-           <property name="text">
-            <string/>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QLabel" name="labelHotLine">
            <property name="text">
             <string/>
            </property>
